<resources>
    <string name="app_name">История Кыргызстана</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="bestScore">Лучший результат</string>
    <string name="start_test">Начать</string>
    <string name="signUp">Зарегистрироваться</string>
    <string name="login">Войти</string>
    <string name="wrong">Неверно</string>
    <string name="correct">Верно</string>
    <string name="unanswered">Неотвеченные</string>
    <string name="reattempt">Пройти заново</string>
    <string name="goHome">Вернуться</string>
    <string name="save">Сохранить</string>
    <string name="cansel">Отмена</string>
    <string name="result">Результат</string>
    <string name="next">Дальше</string>
    <string name="finish">Завершить</string>
    <string name="home">Главная</string>
    <string name="exit"></string>
    <string name="exit_dialog">Вы уверенны что хотите выйти?</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tеst">Тесты</string>
    <string name="menu_themes">Темы</string>
    <string name="menu_account">Мой аккаунт</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>