<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_test"
            android:icon="@drawable/test"
            android:title="@string/menu_tеst" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/test"
            android:title="@string/menu_themes" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/my_acccount"
            android:title="@string/menu_account" />
        <item
            android:id="@+id/alertDialog"
            android:icon="@drawable/logout"
            android:title="Выйти" />

    </group>
</menu>