<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">
    <fragment
        android:id="@+id/nav_home"
        android:name="com.history.historyofkyrgyzstan.ui.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_test" />
    <fragment
        android:id="@+id/nav_test"
        android:name="com.history.historyofkyrgyzstan.TestFragment"
        android:label="@string/menu_tеst"
        tools:layout="@layout/fragment_test" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.history.historyofkyrgyzstan.ThemesFragment"
        android:label="@string/menu_themes"
        tools:layout="@layout/fragment_themes" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.history.historyofkyrgyzstan.AccountFragment"
        android:label="@string/menu_account"
        tools:layout="@layout/fragment_account" />
    <dialog
        android:id="@+id/alertDialog"
        android:name="com.history.historyofkyrgyzstan.MyDialogFragment"
        android:label="AlertDialog"
        tools:layout="@layout/fragment_dialog" />



</navigation>