<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountFragment">

<LinearLayout
    android:layout_width="0dp"
android:layout_margin="8dp"
    android:layout_height="wrap_content"
    android:background="?android:attr/colorBackground"
    app:layout_constraintLeft_toLeftOf="parent"
   app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:orientation="vertical"
    android:layout_marginTop="20dp"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp">

    <Button
        android:id="@+id/editButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:contentDescription="@string/action_settings"
        android:text="Изменить" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">
        <EditText
            android:background="@drawable/toolbar_design"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email"
            android:hint="@string/email"
            android:inputType="text"/>


    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        >
        <EditText
            android:background="@drawable/toolbar_design"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Name"
            android:hint="@string/name"
            android:inputType="text"/>


    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">
        <EditText
            android:background="@drawable/toolbar_design"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/surname"
            android:hint="@string/surname"
            android:inputType="text"/>


    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/save_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="invisible">

        <Button
            android:id="@+id/save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save" />

        <Button
            android:id="@+id/cansel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cansel" />
    </LinearLayout>

    <Button
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
        android:id="@+id/buttonn"
        android:text="@string/menu_account"/>
</LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>